--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@ wheel
 pandas==1.3.5
 pyarrow
 fastparquet
-pyspark==3.2.1
-delta-spark==1.2.1
+pyspark==3.3.0
+delta-spark==2.1.0
 psycopg2
 sqlalchemy
 python-dotenv
 jupyter
+flask
