--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,4 +40,4 @@ jobs:
     #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        sudo pytest tests/test_batch.py
+        sudo python -m pytest tests/test_batch.py
