--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -17,16 +17,16 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    # container:
-    #   image: cse/cddp
-    #   options: --user root
+    container:
+      image: python:buster
+      options: --user root
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
+    # - name: Set up Python 3.10
+    #   uses: actions/setup-python@v3
+    #   with:
+    #     python-version: "3.10"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -40,4 +40,5 @@ jobs:
     #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        sudo python -m pytest tests/test_batch.py
+        pytest tests/test_batch.py
+    # sudo python -m pytest tests/test_batch.py
