--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -18,6 +18,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      pull-requests: write
+    
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.10
