--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,11 +40,12 @@ jobs:
     #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=src/ tests/ | tee pytest-coverage.txt
+        pytest --cov=src/ tests/ --ignore=integration --cov-report term
+#        pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=src/ tests/ | tee pytest-coverage.txt
 #        pytest --cov=src/ tests/ --cov-report html
-#        pytest --cov=src/ tests/ --ignore=integration --cov-report term
-    - name: Pytest coverage comment
-      uses: MishaKav/pytest-coverage-comment@main
-      with:
-        pytest-coverage-path: ./pytest-coverage.txt
-        junitxml-path: ./pytest.xml
+
+    # - name: Pytest coverage comment
+    #   uses: MishaKav/pytest-coverage-comment@main
+    #   with:
+    #     pytest-coverage-path: ./pytest-coverage.txt
+    #     junitxml-path: ./pytest.xml
