change name to CI

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: CI
 
 on:
   workflow_dispatch:
@@ -37,10 +37,18 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names (ignore F821)
         flake8 . --count --select=E9,F63,F7,F82 --ignore=F821 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-    #     flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --cov=src/ tests/ --ignore=integration --cov-report term
+        pytest --cov=src/ tests/ --ignore=integration --cov-report term --cov-report xml:code-coverage.xml
+#        pytest --cov=src/ tests/ --ignore=integration --cov-report term
+
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v3
+      with:
+        name: code-coverage-report
+        path: ./code-coverage.html
+
 #        pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=src/ tests/ | tee pytest-coverage.txt
 #        pytest --cov=src/ tests/ --cov-report html
 
