add trigger to feat and ci branches

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   workflow_dispatch:
   push:
-    branches: [ "dev" ]
+    branches: [ "dev", "feat/**", "ci/**" ]
   pull_request:
     branches: [ "main","dev" ]
 
