--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "PySpark Sample",
-	"dockerFile": "Dockerfile",
+	"dockerFile": "../Dockerfile",
 	"context": "..",
 	"extensions": [
 		"ms-python.python",
