--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,6 +14,15 @@
       "justMyCode": true
     },
     {
+      "name": "Python: main.py ADLS",
+      "type": "python",
+      "request": "launch",
+      "program": "src/main.py",
+      "console": "integratedTerminal",
+      "args": ["--config-path", "./example/pipeline_fruit_batch_ADLS.json", "--working-dir", "./tmp", "--show-result", "--cleanup-database"],
+      "justMyCode": true
+    },
+    {
       "name": "Python: main.py parallel",
       "type": "python",
       "request": "launch",
