--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,8 @@ databricks-cli
 streamlit
 streamlit-echarts
 streamlit-extras
+
+azure-core==1.24.1
+azure.identity
+azure-storage-blob
+azure-data-tables
