--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+  
     {
       "name": "Python: main.py",
       "type": "python",
@@ -64,6 +65,16 @@
       "args": ["tests"],
       "jinja": true,
       "justMyCode": true
+    },
+    {
+      "name": "Python:Streamlit",
+      "type": "python",
+      "request": "launch",
+      "module": "streamlit",
+      "args": [
+           "run",
+           "src/streamlit/Home.py",
+      ]
     }
   ]
 }
